--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-<h1>Hello test</h1>
-<p>This is an important change</p>
+<!doctype html>
+<html>
+  <head>
+    <title>Tropicali</title>
+    <meta name="viewport" content="width=device-width, inital-scale=1">
+    <link rel="stylesheet" href="style.css">
+  </head>
+
+  <body>
+    <h1>Hello test</h1>
+    <p>This is an important change</p>
+  </body>
+
+<html>
