--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <h1>Hello test</h1>
-    <p>This is an important change</p>
+    <p>This is an important change II.</p>
   </body>
 
 <html>
