--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <h1>Hello test</h1>
-    <p>This is an important change 23.</p>
+    <p>This is an important change. The live event will be in september.</p>
   </body>
 
 <html>
